--- a/package.json
+++ b/package.json
@@ -2,14 +2,31 @@
   "name": "workout",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
+    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
+    "b": "webpack"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Melentiev Yevhen <melentiev.91@gmail.com>",
+  "license": "MIT",
   "devDependencies": {
-    "webpack": "^4.8.3",
-    "webpack-cli": "^2.1.3"
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-stage-3": "^6.24.1",
+    "cross-env": "^5.0.5",
+    "css-loader": "^0.28.7",
+    "file-loader": "^1.1.4",
+    "node-sass": "^4.5.3",
+    "sass-loader": "^6.0.6",
+    "vue-loader": "^13.0.5",
+    "vue-template-compiler": "^2.4.4",
+    "webpack": "^3.6.0",
+    "webpack-dev-server": "^2.9.1"
+  },
+  "dependencies": {
+    "vue": "^2.5.11",
+    "vuex": "^3.0.1"
   }
 }
